<resources>
    <string name="app_name">Admin-Side-Kerux</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_enrollment">Enrollment</string>
    <string name="menu_unenrollment">Revoke Privileges</string>
    <string name="menu_manage_acc">Manage Accounts</string>
    <string name="menu_manage_rep">Manage Reports</string>

    <string name="choose">Choose to Enroll</string>
    <string name="enroll_dept">Department Enrollment</string>
    <string name="enroll_qm">Queue Manager Enrollment</string>
    <string name="enroll_doc">Doctor Enrollment</string>


    <string name="home_second">Home Second</string>
</resources>
