<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kerux.admin_side_kerux.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.kerux.admin_side_kerux.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_enrollment"
        android:name="com.kerux.admin_side_kerux.ui.enrollment.EnrollmentFragment"
        android:label="@string/menu_enrollment"
        tools:layout="@layout/fragment_enrollment" />

    <fragment
        android:id="@+id/nav_unenrollment"
        android:name="com.kerux.admin_side_kerux.ui.unenrollment.UnenrollmentFragment"
        android:label="@string/menu_unenrollment"
        tools:layout="@layout/fragment_unenrollment" />
    <fragment
        android:id="@+id/nav_manage_acc"
        android:name="com.kerux.admin_side_kerux.ui.manageaccounts.ManageAccountsFragment"
        android:label="@string/menu_manage_acc"
        tools:layout="@layout/fragment_manage_accounts" />
    <fragment
        android:id="@+id/nav_manage_rep"
        android:name="com.kerux.admin_side_kerux.ui.managereports.ManageReportsFragment"
        android:label="@string/menu_manage_rep"
        tools:layout="@layout/fragment_manage_reports" />
</navigation>